use ArrayList instead of LinkedList in Canonical parser ans scanner